<resources>
    <string name="app_name">LibrariesFlyers</string>
    <string name="google_maps_key">AIzaSyC3AGRhP1xeew3aqOKq0YJ-nWOyjH-uq20</string>
    <string name="title_activity_tab_activty">TabActivty</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_action_bar">TabActivityActionBar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">""</string>


    <!-- Value Array Filter -->
    <string name="stars">- Stars</string>
    <string name="prices">- Price</string>
    <string name="services">- Services</string>
    <string name="regimen">- Regimen</string>
    <string name="hotel_shain">- Hotel Shain</string>

    <!-- Top Draggable-->
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="price">- Price</string>
    <string name="category">- Category</string>
    <string name="distance">- Distance</string>
    <string name="hotels_available">Hotels Available</string>

    <string name="from">From $</string>
    <string name="to">To $</string>

    <!-- Filter Star-->
    <string name="one_star">1 star</string>
    <string name="two_stars">2 star</string>
    <string name="three_stars">3 star</string>
    <string name="four_stars">4 star</string>
    <string name="five_stars">5 start</string>

    <!-- Filter Service-->
    <string name="air_conditioning">Air Conditioning</string>
    <string name="airport_shufle">Airport Shufle</string>
    <string name="indoor_pool">Indoor Pool</string>
    <string name="pets_welcome">Pets Welcome</string>
    <string name="spa_fitness">SPA &amp; Fitness</string>
    <string name="wi_fi">WiFI</string>

    <!-- Filter Regime-->
    <string name="only_lodging">Only lodging</string>
    <string name="breakfast">Breakfast</string>
    <string name="half_pension">Half pension</string>
    <string name="full_board">Full board</string>
    <string name="all_inclusive">All inclusive</string>

    <!-- Sort Price -->
    <string name="higher_price">Higher Price</string>
    <string name="lowest_price">Lowest Price</string>

    <!-- Sort Category -->
    <string name="one_to_five">1 to 5</string>
    <string name="five_to_one">5 to 1</string>

</resources>
