<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_service"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFEFEF"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- Service @string air_conditioning-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_conditioning"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_air_conditioning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string air_conditioning-->

    <!-- Service @string airport_shufle-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airport_shufle"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_airport_shufle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string airport_shufle-->

    <!-- Service @string indoor_pool-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indoor_pool"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_indoor_pool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string indoor_pool-->

    <!-- Service @string pets_welcome-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pets_welcome"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_pets_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @spa_fitness pets_welcome-->

    <!-- Service @string spa_fitness-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spa_fitness"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_spa_fitness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string spa_fitness-->

    <!-- Service @string wi_fi-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <TextView
                    android:id="@+id/detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wi_fi"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_wi_fi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string wi_fi-->


</LinearLayout>