<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_regime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFEFEF"
    android:orientation="vertical"
    android:visibility="visible">

    <!-- Service @string only_lodging-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <com.test.trejo.jesus.librariesflyers.utils.PanelTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/only_lodging"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_only_lodging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string air_conditioning-->

    <!-- Service @string breakfast-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <com.test.trejo.jesus.librariesflyers.utils.PanelTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string breakfast-->

    <!-- Service @string half_pension-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <com.test.trejo.jesus.librariesflyers.utils.PanelTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/half_pension"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_half_pension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string half_pension-->

    <!-- Service @string full_board-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <com.test.trejo.jesus.librariesflyers.utils.PanelTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_board"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_full_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @full_board-->

    <!-- Service @string all_inclusive-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8">

                <com.test.trejo.jesus.librariesflyers.utils.PanelTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_inclusive"
                    android:textColor="#030303" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:gravity="right"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkbox_all_inclusive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E1E1E1" />


    </LinearLayout><!-- Service @string all_inclusive-->

</LinearLayout>